cmake_minimum_required(VERSION 3.15)
project(ComOCamp2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ComO_01 ComO_01.cpp)
add_executable(ComO_02 ComO_02.cpp)
add_executable(ComO_03 ComO_03.cpp)
add_executable(ComO_04 ComO_04.cpp)
add_executable(ComO_02Test ComO_02Test.cpp)

add_executable(Test Test.cpp)

add_executable(ComO_05 ComO_05.cpp)
add_executable(Paper_01 Stack/Paper_01.cpp)
add_executable(Paper_02 Stack/Paper_02.cpp)
add_executable(ComO_06 ComO_06.cpp)
add_executable(Set_01 Set/Set_01.cpp)
add_executable(Set_02 Set/Set_02.cpp)
add_executable(Map_01 Map/Map_01.cpp)
add_executable(Map_02 Map/Map_02.cpp)
add_executable(ComO_07 ComO_07.cpp)
add_executable(BST BST.cpp)
add_executable(Heap Heap.cpp)
add_executable(PQ_01 "Priority Queue/PQ_01.cpp")
add_executable(PQ_02 "Priority Queue/PQ_02.cpp")
add_executable(Problem "Priority Queue/Problem.cpp")